<resources>
    <string name="shows">Shows</string>
    <string name="lists">Lists</string>
    <string name="movies">Movies</string>
    <string name="statistics">Statistics</string>
    <string name="search">Search</string>
    <string name="preferences">Settings</string>
    <string name="help">Help</string>
    <string name="help_and_feedback">Help &amp; Feedback</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="show">Show</string>
    <string name="episode">Episode</string>
    <string name="episode_number">Episode %d</string>
    <string name="episodes">Episodes</string>
    <string name="season">Season</string>
    <string name="season_number">Season %d</string>
    <string name="seasons">Seasons</string>
    <string name="specialseason">Special Episodes</string>
    <string name="description_overview">Overview</string>
    <string name="description_poster">Show poster</string>
    <string name="description_image">Episode image</string>
    <string name="description_menu_overflow">More options</string>
    <string name="clear">Clear</string>
    <string name="discard">Discard</string>
    <string name="save_selection">Save selection</string>
    <string name="action_display_all">Show all</string>
    <string name="web_search">Web search</string>
    <string name="add_to_homescreen">Shortcut</string>
    <string name="action_open">Open</string>
    <string name="sync_manually">Sync manually</string>
    <string name="sync_and_update">Sync &amp; Update</string>
    <string name="sync_and_download_all">Sync &amp; Download all</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="search_hint">Search episodes</string>
    <string name="any_language">Any language</string>
    <string name="updated">Updated to latest version.</string>
    <string name="norating">n/a</string>
    <string name="unknown">unknown</string>
    <string name="offline">Connect to a network, then try again.</string>
    <string name="app_not_available">No app available to handle this.</string>
    <string name="people_empty">Nobody here?! Touch to try again.</string>
    <string name="database_error">Could not modify data.</string>
    <string name="reinstall_info">Try to backup in Settings, re-install and restore.</string>
    <string name="api_error_generic">Could not talk to %s. Try again later.</string>
    <string name="share">Share</string>
    <string name="share_show">Share show</string>
    <string name="share_episode">Share episode</string>
    <string name="share_movie">Share movie</string>
    <string name="addtocalendar">Add to calendar</string>
    <string name="addtocalendar_failed">Can not create a calendar event.</string>
    <string name="links">Links</string>
    <string name="comments">Comments</string>
    <string name="shout_hint">Type a comment (English, 5+ words)</string>
    <string name="shout_invalid">Your comment does not follow the rules!</string>
    <string name="action_post">Post</string>
    <string name="isspoiler">Spoiler alert!</string>
    <string name="no_shouts">Be the first to comment!</string>
    <string name="refresh">Refresh</string>
    <plurals name="replies_plural">
        <item quantity="one">%d reply</item>
        <item quantity="zero">%d replies</item>
        <item quantity="two">%d replies</item>
        <item quantity="few">%d replies</item>
        <item quantity="many">%d replies</item>
        <item quantity="other">%d replies</item>
    </plurals>
    <string name="episode_number_absolute">ABSOLUTE</string>
    <string name="episode_number_disk">DVD</string>
    <string name="episode_firstaired">Release date</string>
    <string name="episode_firstaired_unknown">Release date unknown</string>
    <string name="episode_dvdnumber">DVD Episode</string>
    <string name="original_release">Original release</string>
    <string name="show_on_network">on %s</string>
    <string name="show_genres">Genres</string>
    <string name="show_contentrating">Content Rating</string>
    <string name="show_release_times">Release times</string>
    <string name="episode_directors">Directors</string>
    <string name="episode_gueststars">Guest Stars</string>
    <string name="episode_writers">Writers</string>
    <string name="show_isalive">Continuing</string>
    <string name="show_isnotalive">Ended</string>
    <string name="lastEdit">Last Edit // TheTVDB</string>
    <string name="no_translation">There is no description translated to %1$s available at %2$s.</string>
    <string name="no_translation_title">Not translated</string>
    <string name="no_spoilers">Some details are hidden to prevent spoilers. To turn this off go to Settings.</string>
    <string name="today">today</string>
    <string name="now">now</string>
    <string name="daily">Daily</string>
    <string name="release_date_and_day">%1$s (%2$s)</string>
    <string name="runtime_minutes">%s min</string>
    <string name="mark_all">Watched all</string>
    <string name="unmark_all">Watched none</string>
    <string name="mark_untilhere">Set all older watched</string>
    <string name="collect_all">Collected all</string>
    <string name="uncollect_all">Collected none</string>
    <string name="action_skip">Skip</string>
    <string name="action_dont_skip">Don\'t skip</string>
    <string name="action_collection_add">Add to collection</string>
    <string name="action_collection_remove">Remove from collection</string>
    <string name="action_collection_added">Added to collection</string>
    <string name="action_collection_removed">Removed from collection</string>
    <string name="action_watched">Set watched</string>
    <string name="action_unwatched">Set not watched</string>
    <string name="confirm_delete">Do you really want to remove %s?</string>
    <string name="delete_error">Could not remove show. Try again later.</string>
    <string name="delete_show">Remove</string>
    <string name="no_nextepisode">no next episode found</string>
    <string name="context_favorite">Add to favorites</string>
    <string name="context_unfavorite">Remove from favorites</string>
    <string name="favorited">Added to favorites</string>
    <string name="unfavorited">Removed from favorites</string>
    <string name="action_episode_notifications_on">Turn on episode notifications</string>
    <string name="action_episode_notifications_off">Turn off episode notifications</string>
    <string name="context_hide">Hide</string>
    <string name="context_unhide">Do not hide</string>
    <string name="hidden">Moved to hidden</string>
    <string name="unhidden">Show is visible again</string>
    <string name="action_shows_add">Add show</string>
    <string name="action_shows_filter">Filter shows</string>
    <string name="empty_filter">Remove all filters</string>
    <string name="action_shows_filter_favorites">Favorites</string>
    <string name="action_shows_filter_unwatched">Unwatched</string>
    <string name="action_shows_filter_upcoming">Upcoming</string>
    <string name="action_shows_filter_hidden">Hidden</string>
    <string name="action_shows_sort">Sort shows</string>
    <string name="action_shows_sort_title">Title</string>
    <string name="action_shows_sort_latest_episode">Latest episode</string>
    <string name="action_shows_sort_oldest_episode">Oldest episode</string>
    <string name="action_shows_sort_last_watched">Last watched</string>
    <string name="action_shows_sort_remaining">Remaining episodes</string>
    <string name="action_shows_sort_favorites">Favorites first</string>
    <string name="context_updateshow">Update</string>
    <string name="context_marknext">Watched next episode</string>
    <string name="now_tab">Now</string>
    <string name="recently_watched">Recently watched</string>
    <string name="released_today">Released today</string>
    <string name="friends_recently">Your trakt friends</string>
    <string name="now_empty">Nothing going on. Watch some shows!</string>
    <string name="now_movies_empty">Nothing going on. Watch some movies!</string>
    <string name="user_stream">History</string>
    <string name="user_stream_empty">No history on trakt. Watch and check into some shows!</string>
    <string name="user_movie_stream_empty">No history on trakt. Watch and check into some movies!</string>
    <string name="upcoming">Upcoming</string>
    <string name="recent">Recent</string>
    <string name="noupcoming">There are no upcoming episodes.</string>
    <string name="norecent">There are no recent episodes.</string>
    <string name="calendar_settings">Calendar settings</string>
    <string name="only_favorites">Only favorite shows</string>
    <string name="calendar_only_collected">Only collected episodes</string>
    <string name="pref_infinite_scrolling">Infinite calendar</string>
    <string name="list_add">Add list</string>
    <string name="list_manage">Manage list</string>
    <string name="list_item_manage">Manage lists</string>
    <string name="action_lists_sort">Sort lists</string>
    <string name="action_lists_reorder">Reorder lists</string>
    <string name="action_movies_sort">Sort movies</string>
    <string name="action_movies_sort_title">Title</string>
    <string name="action_movies_sort_release">Release date</string>
    <string name="pref_quick_checkin">Quick check in</string>
    <string name="pref_quick_checkin_summary">Do not ask for a check in message</string>
    <string name="prefs_category_basic">Basics</string>
    <string name="prefs_category_sharing">Services</string>
    <string name="prefs_category_about">About</string>
    <string name="pref_onlyfuture">No aired episodes</string>
    <string name="pref_onlyfuturesummary">Never display already aired episodes</string>
    <string name="pref_onlyseasoneps">Hide special episodes</string>
    <string name="pref_onlyseasonepssummary">Special episodes disappear from everywhere except season list</string>
    <string name="pref_exactdates">Display exact dates</string>
    <string name="pref_exactdates_summary">\"October 31\" instead of \"in 3 days\"</string>
    <string name="pref_updatewifionly">Images via Wi-Fi only</string>
    <string name="pref_updatewifionlysummary">To reduce data charges, don\'t download over mobile or metered networks</string>
    <string name="sort">Sort by</string>
    <string name="action_sort_ignore_articles">Ignore articles</string>
    <string name="pref_upcominglimit">Upcoming range</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_other">Other</string>
    <string name="pref_autoupdatesummary">Automatically sync and update SeriesGuide data</string>
    <string name="pref_autobackup">Auto Backup</string>
    <string name="pref_autobackupsummary">Weekly backup of your shows, lists and movies</string>
    <string name="backup">Backup/Restore</string>
    <string name="backup_summary">Backup or restore your shows</string>
    <string name="pref_number">Number format</string>
    <string name="pref_offset">Manual time offset</string>
    <string name="clear_cache">Clear image caches</string>
    <string name="clear_cache_summary">Remove all cached images from your device</string>
    <string name="pref_ganalyticssummary">Send anonymous usage statistics to a Google service</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notificationssummary">Notify about new episodes</string>
    <string name="pref_ringtone">Sound</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibratesummary">Also vibrate on displaying a notification</string>
    <string name="pref_notifications_treshold">When to notify</string>
    <string name="pref_notifications_select_shows">Select shows</string>
    <string name="hide_watched">Hide watched episodes</string>
    <string name="action_upgrade">Unlock all features</string>
</resources>