<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="False"
        android:key="com.battlelancer.seriesguide.trakt.quickcheckin"
        android:summary="@string/pref_quick_checkin_summary"
        android:title="@string/pref_quick_checkin" />

    <PreferenceCategory android:title="@string/shows">

        <CheckBoxPreference
            android:defaultValue="False"
            android:key="onlyFutureEpisodes"
            android:summary="@string/pref_onlyfuturesummary"
            android:title="@string/pref_onlyfuture" />

        <CheckBoxPreference
            android:defaultValue="False"
            android:key="onlySeasonEpisodes"
            android:summary="@string/pref_onlyseasonepssummary"
            android:title="@string/pref_onlyseasoneps" />

        <CheckBoxPreference
            android:defaultValue="False"
            android:key="com.battlelancer.seriesguide.shows.exactdate"
            android:summary="@string/pref_exactdates_summary"
            android:title="@string/pref_exactdates" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/offsets"
            android:entryValues="@array/offsetData"
            android:key="com.battlelancer.seriesguide.timeoffset"
            android:title="@string/pref_offset" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_appearance">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/themeSelection"
            android:entryValues="@array/themeSelectionData"
            android:key="com.battlelancer.seriesguide.theme"
            android:title="@string/pref_theme" />
        <ListPreference
            android:defaultValue="default"
            android:entries="@array/numbers"
            android:entryValues="@array/numberData"
            android:key="numberformat"
            android:title="@string/pref_number" />
    </PreferenceCategory>

</PreferenceScreen>