<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_action_shows_watched_next"
        android:title="@string/context_marknext" />
    <item
        android:id="@+id/menu_action_shows_favorites_add"
        android:title="@string/context_favorite" />
    <item
        android:id="@+id/menu_action_shows_favorites_remove"
        android:title="@string/context_unfavorite" />
    <item
        android:id="@+id/menu_action_shows_hide"
        android:title="@string/context_hide" />
    <item
        android:id="@+id/menu_action_shows_unhide"
        android:title="@string/context_unhide" />
    <item
        android:id="@+id/menu_action_shows_manage_lists"
        android:title="@string/list_item_manage" />
    <item
        android:id="@+id/menu_action_shows_update"
        android:title="@string/context_updateshow" />
    <item
        android:id="@+id/menu_action_shows_remove"
        android:title="@string/delete_show" />

</menu>