<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="True"
        android:key="com.battlelancer.seriesguide.notifications"
        android:summary="@string/pref_notificationssummary"
        android:title="@string/pref_notifications" />

    <Preference
        android:key="com.battlelancer.seriesguide.notifications.threshold"
        android:title="@string/pref_notifications_treshold" />

    <Preference
        android:key="com.battlelancer.seriesguide.notifications.shows"
        android:title="@string/pref_notifications_select_shows" />

    <CheckBoxPreference
        android:defaultValue="False"
        android:key="com.battlelancer.seriesguide.notifications.vibrate"
        android:summary="@string/pref_vibratesummary"
        android:title="@string/pref_vibrate" />

    <Preference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="com.battlelancer.seriesguide.notifications.ringtone"
        android:title="@string/pref_ringtone" />

</PreferenceScreen>