<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Uwe Trottmann
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_action_episodes_watched"
        android:title="@string/action_watched" />
    <item
        android:id="@+id/menu_action_episodes_not_watched"
        android:title="@string/action_unwatched" />
    <item
        android:id="@+id/menu_action_episodes_collection_add"
        android:title="@string/action_collection_add" />
    <item
        android:id="@+id/menu_action_episodes_collection_remove"
        android:title="@string/action_collection_remove" />
    <item
        android:id="@+id/menu_action_episodes_skip"
        android:title="@string/action_skip" />
    <item
        android:id="@+id/menu_action_episodes_dont_skip"
        android:title="@string/action_dont_skip" />
    <item
        android:id="@+id/menu_action_episodes_watched_previous"
        android:title="@string/mark_untilhere" />
    <item
        android:id="@+id/menu_action_episodes_manage_lists"
        android:title="@string/list_item_manage" />

</menu>