<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_lists_add"
        android:icon="@drawable/ic_action_new_list"
        android:orderInCategory="0"
        android:title="@string/list_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_action_lists_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_action_lists_edit"
        android:orderInCategory="2"
        android:title="@string/list_manage"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_lists_sort"
        android:icon="@drawable/ic_action_sort"
        android:orderInCategory="3"
        android:title="@string/action_lists_sort"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_action_lists_sort_title"
                android:title="@string/action_shows_sort_title" />
            <item
                android:id="@+id/menu_action_lists_sort_episode"
                android:title="@string/action_shows_sort_episode" />
            <item
                android:id="@+id/menu_action_lists_sort_ignore_articles"
                android:checkable="true"
                android:title="@string/action_sort_ignore_articles" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_action_lists_reorder"
        android:orderInCategory="4"
        android:title="@string/action_lists_reorder"
        app:showAsAction="never" />

</menu>