<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sesortby"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/sort"/>
    <item
        android:id="@+id/menu_watched_all"
        android:orderInCategory="201"
        app:showAsAction="never"
        android:title="@string/mark_all"/>
    <item
        android:id="@+id/menu_unwatched_all"
        android:orderInCategory="202"
        app:showAsAction="never"
        android:title="@string/unmark_all"/>
    <item
        android:id="@+id/menu_collect_all"
        android:orderInCategory="203"
        app:showAsAction="never"
        android:title="@string/collect_all"/>
    <item
        android:id="@+id/menu_uncollect_all"
        android:orderInCategory="204"
        app:showAsAction="never"
        android:title="@string/uncollect_all"/>

</menu>