<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Uwe Trottmann
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_action_shows_filter"
        android:icon="@drawable/ic_action_filter_inverse"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_shows_filter">
        <menu>
            <item
                android:id="@+id/menu_action_shows_filter_favorites"
                android:checkable="true"
                android:title="@string/action_shows_filter_favorites" />
            <item
                android:id="@+id/menu_action_shows_filter_unwatched"
                android:checkable="true"
                android:title="@string/action_shows_filter_unwatched" />
            <item
                android:id="@+id/menu_action_shows_filter_upcoming"
                android:checkable="true"
                android:title="@string/action_shows_filter_upcoming" />
            <item
                android:id="@+id/menu_action_shows_filter_hidden"
                android:checkable="true"
                android:title="@string/action_shows_filter_hidden" />
            <item
                android:id="@+id/menu_action_shows_filter_remove"
                android:title="@string/empty_filter" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_action_shows_sort"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_shows_sort">
        <menu>
            <item
                android:id="@+id/menu_action_shows_sort_title"
                android:title="@string/action_shows_sort_title" />
            <item
                android:id="@+id/menu_action_shows_sort_episode"
                android:title="@string/action_shows_sort_episode" />
            <item
                android:id="@+id/menu_action_shows_sort_favorites"
                android:checkable="true"
                android:title="@string/action_shows_sort_favorites" />
        </menu>
    </item>

</menu>