<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Icon is set in code. -->
    <item
        android:id="@+id/menu_calendar_visibility"
        android:orderInCategory="0"
        android:title="@string/calendar_settings"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/menu_action_calendar_onlyfavorites"
                android:checkable="true"
                android:title="@string/only_favorites" />
            <item
                android:id="@+id/menu_action_calendar_onlycollected"
                android:checkable="true"
                android:title="@string/calendar_only_collected" />
            <item
                android:id="@+id/menu_action_calendar_nowatched"
                android:checkable="true"
                android:title="@string/hide_watched" />
            <item
                android:id="@+id/menu_action_calendar_nospecials"
                android:checkable="true"
                android:title="@string/pref_onlyseasoneps" />
            <item
                android:id="@+id/menu_action_calendar_infinite"
                android:checkable="true"
                android:title="@string/pref_infinite_scrolling" />
        </menu>
    </item>

</menu>